modify url in manifest.json, modify homepage on package.json

--- a/package.json
+++ b/package.json
@@ -35,6 +35,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ],
-    "homepage": "https://mcb85.github.io/clicky/"
+    "homepage": "https://mcb85.github.io/clicky"
   }
 }
