--- a/package.json
+++ b/package.json
@@ -34,6 +34,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ],
-    "homepage": "https://mcb85.github.io/clicky"
+    "homepage": "https://mcb85.github.io"
   }
 }
