--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
-{
+{"homepage": "https://mcb85.github.io/clicky",
   "name": "clicky",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
     "gh-pages": "^2.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -33,7 +30,7 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
-    ],
-    "homepage": "https://mcb85.github.io/clicky"
+    ]
+    
   }
 }
